# Mode_superposition

./: .gitignore  CMakeLists.txt  param.txt  test
include/: Displacement.h  ForceCalculator.h  Geometry.h  ModeData.h  ModeShape.h  Simulation.h  SimulationParams.h  State.h  TimeIntegrator.h  wavwrite.h
input/: frequency.txt  frequency2.txt  frequency_renewal.txt  frequency_renewal3mm.txt  frequency_renewal3mm_brian.txt  param.txt  surface_data.nas  surface_data_renewal.nas
input/old/: no_mem_frequency.txt  param0.txt  surface.txt
src/: forceCalculator.cpp  geometry.cpp  modedata.cpp  nomalizeModes.cpp  pressure.py  printParams.cpp  printVTK.cpp  readParams.cpp  readVTK.cpp  rungeStep.cpp  show.py  simulation.cpp  state.cpp  test.cpp
tools/: freq.py  show2.py  surfp.py
